yaml/liveness-probe.yaml
# liveness-probe.yaml

apiVersion: v1
kind: Pod
metadata:
  name: my-app1
  namespace: exam
spec:
  containers:
  - name: backend
    image: aymennf/backimg:latest
    resources:
      limits:
        cpu: "500m"  
        memory: "512Mi"  
      requests:
        cpu: "100m"  
        memory: "256Mi"  
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
      initialDelaySeconds: 3
      periodSeconds: 10
