yaml/startup-probe.yaml
# startup-probe.yaml

apiVersion: v1
kind: Pod
metadata:
  name: my-app
  namespace: exam
spec:
  containers:
  - name: backend
    image: localhost:5000/backimg:latest
    resources:
      limits:
        cpu: "500m"
        memory: "512Mi"  
      requests:
        cpu: "100m"  
        memory: "256Mi"  
    startupProbe:
      httpGet:
        path: /startup
        port: 8080
      initialDelaySeconds: 10
      periodSeconds: 20
